FIND_PACKAGE( PCL REQUIRED )
FIND_PACKAGE( OpenCV REQUIRED )

ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS} )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

ADD_LIBRARY( slambase slamBase.cpp )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
TARGET_LINK_LIBRARIES( slambase 
							${OpenCV_LIBS}
							${PCL_LIBRARIES}
							-llua
							-ldl
							)
						
ADD_EXECUTABLE( main main.cpp )
TARGET_LINK_LIBRARIES( main
		slambase
		${OpenCV_LIBS}
		${PCL_LIBRARIES}
		-llua
		-ldl
		)
